// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should open menu on click if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
          option Ocean focused, 1 of 6. 6 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-11-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1pxbrck-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="menu dropdown-wrapper__menu--open css-1ysewv0-menu"
    >
      <div
        class=" css-bknh9q-Component"
      >
        <div
          class=" css-14cnnyc-option"
          id="react-select-11-option-0"
          tabindex="-1"
        >
          Ocean
        </div>
        <div
          class=" css-15bbhzv-option"
          id="react-select-11-option-1"
          tabindex="-1"
        >
          Blue
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-11-option-2"
          tabindex="-1"
        >
          Purple
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-11-option-3"
          tabindex="-1"
        >
          Red
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-11-option-4"
          tabindex="-1"
        >
          Orange
        </div>
        <div
          class=" css-4bbyqz-option"
          id="react-select-11-option-5"
          tabindex="-1"
        >
          Yellow
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should open menu on focus if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
           0 results available. Select is focused ,type to refine list, press Down to open the menu, 
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-10-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-slqvkp-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should render correctly for the different sizes 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-1pu8kyc-container"
  >
    <div
      class=" css-veeint-control"
    >
      <div
        class=" css-18qqyiw-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-3-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-col3eb-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-prutdb-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="16px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="16px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should render correctly for the different sizes 2`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-1pu8kyc-container"
  >
    <div
      class=" css-veeint-control"
    >
      <div
        class=" css-18qqyiw-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-4-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-col3eb-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-prutdb-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="16px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="16px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should render correctly for the different sizes 3`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-1pu8kyc-container"
  >
    <div
      class=" css-veeint-control"
    >
      <div
        class=" css-18qqyiw-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-5-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-col3eb-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-prutdb-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="16px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="16px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should render correctly for the different sizes 4`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <div
      class=" css-132xx32-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-6-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1ycu3uq-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should render correctly for the different sizes 5`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-cmnsoe-container"
  >
    <div
      class=" css-ng27sg-control"
    >
      <div
        class=" css-rxqqti-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-7-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-hsetqv-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1uglcx3-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should render correctly with empty props 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <div
      class=" css-132xx32-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-2-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1ycu3uq-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should use async if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
           0 results available. Select is focused ,type to refine list, press Down to open the menu, 
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-9-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <div
          aria-hidden="true"
          class=" css-1xh8qep-loadingIndicator"
        >
          <span
            class="css-imwzes-Component"
          />
          <span
            class="css-1ue98e-Component"
          />
          <span
            class="css-fwsb3e-Component"
          />
        </div>
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-slqvkp-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown should use virtualization if set 1`] = `
<DocumentFragment>
  <div
    class="dropdown-wrapper dropdown-story css-bbwnb8-container"
  >
    <span
      aria-live="polite"
      class="css-1laao21-a11yText"
    >
      <span
        id="aria-selection-event"
      >
         
      </span>
      <span
        id="aria-context"
      >
          option 1 focused, 1 of 10000. 10000 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class=" css-quv8ei-control"
    >
      <div
        class=" css-1ht1nal-Component"
      >
        <div
          class=" css-1dtegfv-placeholder"
        />
        <div
          class="css-lkl2xd-Component"
        >
          <div
            class=""
            style="display: inline-block;"
          >
            <input
              aria-autocomplete="list"
              aria-label="Dropdown input"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              id="react-select-8-input"
              spellcheck="false"
              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
      </div>
      <div
        class=" css-1aqjfd-Component"
      >
        <span
          class=" css-ds71as-Component"
        />
        <div
          aria-hidden="true"
          class="dropdown-indicator css-1pxbrck-indicatorContainer"
        >
          <svg
            aria-hidden="false"
            class="icon_component icon_component--clickable"
            fill="currentColor"
            height="20px"
            role="button"
            tabindex="-1"
            viewBox="0 0 20 20"
            width="20px"
          >
            <path
              clip-rule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="menu dropdown-wrapper__menu--open css-1ysewv0-menu"
    >
      <div
        class=""
        style="position: relative; height: 300px; overflow: auto; will-change: transform; direction: ltr; overflow-y: auto; box-sizing: border-box;"
      >
        <div
          style="height: 350008px; width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 4px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-14cnnyc-option"
                id="react-select-8-option-0"
                tabindex="-1"
              >
                1
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 39px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-1"
                tabindex="-1"
              >
                2
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 74px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-2"
                tabindex="-1"
              >
                3
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 109px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-3"
                tabindex="-1"
              >
                4
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 144px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-4"
                tabindex="-1"
              >
                5
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 179px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-5"
                tabindex="-1"
              >
                6
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 214px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-6"
                tabindex="-1"
              >
                7
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 249px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-7"
                tabindex="-1"
              >
                8
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 284px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-8"
                tabindex="-1"
              >
                9
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 319px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-9"
                tabindex="-1"
              >
                10
              </div>
            </div>
          </div>
          <div
            style="position: absolute; left: 0px; top: 354px; height: 35px; width: 100%;"
          >
            <div>
              <div
                class=" css-4bbyqz-option"
                id="react-select-8-option-10"
                tabindex="-1"
              >
                11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
